--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,8 @@
 ---
 import "../styles/global.css";
+import Footer from "../components/Footer.astro";
+import Navbar from "../components/Navbar.astro";
+
 interface Props {
   title: string;
 }
@@ -35,7 +38,10 @@ const { title } = Astro.props;
     
     <title>{title}</title>
   </head>
-  <body class="antialiased">
+  <body class="antialiased bg-gray-200 dark:bg-gray-900">
+  </Navbar>
     <slot />
+
+  </Footer>  
   </body>
 </html>
